SplCompiler/src/spl_t.output
Grammar

    0 $accept: program $end

    1 program: IDENTIFIER COLON block ENDP IDENTIFIER PERIOD

    2 block: DECLARATIONS declaration_block CODE code
    3      | CODE code

    4 declaration_block: declaration
    5                  | declaration_block declaration

    6 declaration: identifier_list OF TYPE type SEMI_COLON

    7 identifier_list: IDENTIFIER
    8                | identifier_list COMMA IDENTIFIER

    9 type: TYPE_CHARACTER
   10     | TYPE_INTEGER
   11     | TYPE_REAL

   12 code: statement_list
   13     | statement_list SEMI_COLON

   14 statement_list: statement
   15               | statement_list SEMI_COLON statement

   16 statement: assignment_statement
   17          | write_statement
   18          | read_statement
   19          | if_statement
   20          | if_else_statement
   21          | for_statement
   22          | while_statement
   23          | do_statement

   24 assignment_statement: expression ASSIGNMENT_OPERATOR IDENTIFIER

   25 value: OPEN_BRACKET expression CLOSE_BRACKET
   26      | IDENTIFIER
   27      | constant

   28 expression: expression SUBTRACT_OPERATOR term
   29           | expression ADD_OPERATOR term
   30           | term

   31 term: term MULTIPULCATION_OPERATOR value
   32     | term DIVISION_OPERATOR value
   33     | value

   34 constant: REAL
   35         | UNSIGNED_INTEGER
   36         | SUBTRACT_OPERATOR UNSIGNED_INTEGER
   37         | CHARACTER_CONSTANT

   38 write_statement: WRITE OPEN_BRACKET output_list CLOSE_BRACKET
   39                | NEWLINE

   40 output_list: value
   41            | output_list COMMA value

   42 comparator: EQUALITY_OPERATOR
   43           | NOT_EQUAL_TO_OPERATOR
   44           | LESS_THAN_OPERATOR
   45           | MORE_THAN_OPERATOR
   46           | LESS_EQUAL_TO_OPERATOR
   47           | MORE_EQUAL_TO_OPERATOR

   48 read_statement: READ OPEN_BRACKET IDENTIFIER CLOSE_BRACKET

   49 if_statement: IF conditional THEN code ENDIF

   50 if_else_statement: IF conditional THEN code ELSE code ENDIF

   51 conditional: comparison
   52            | conditional AND comparison
   53            | conditional OR comparison

   54 comparison: expression comparator expression
   55           | NOT comparison

   56 for_statement: FOR IDENTIFIER IS expression BY expression TO expression DO code ENDFOR

   57 while_statement: WHILE conditional DO code ENDWHILE

   58 do_statement: DO statement_list WHILE conditional ENDDO
   59             | DO statement_list SEMI_COLON WHILE conditional ENDDO


Terminals, with rules where they appear

$end (0) 0
error (256)
ENDP (258) 1
DECLARATIONS (259) 2
CODE (260) 2 3
TYPE_CHARACTER (261) 9
TYPE_INTEGER (262) 10
TYPE_REAL (263) 11
IF (264) 49 50
ELSE (265) 50
NOT (266) 55
OF (267) 6
TYPE (268) 6
THEN (269) 49 50
ENDIF (270) 49 50
AND (271) 52
OR (272) 53
DO (273) 56 57 58 59
WHILE (274) 57 58 59
ENDDO (275) 58 59
ENDWHILE (276) 57
FOR (277) 56
IS (278) 56
BY (279) 56
TO (280) 56
ENDFOR (281) 56
NEWLINE (282) 39
WRITE (283) 38
READ (284) 48
ASSIGNMENT_OPERATOR (285) 24
EQUALITY_OPERATOR (286) 42
NOT_EQUAL_TO_OPERATOR (287) 43
LESS_THAN_OPERATOR (288) 44
MORE_THAN_OPERATOR (289) 45
LESS_EQUAL_TO_OPERATOR (290) 46
MORE_EQUAL_TO_OPERATOR (291) 47
OPEN_BRACKET (292) 25 38 48
CLOSE_BRACKET (293) 25 38 48
COMMA (294) 8 41
COLON (295) 1
SEMI_COLON (296) 6 13 15 59
PERIOD (297) 1
ADD_OPERATOR (298) 29
SUBTRACT_OPERATOR (299) 28 36
DIVISION_OPERATOR (300) 32
MULTIPULCATION_OPERATOR (301) 31
CHARACTER_CONSTANT (302) 37
UNSIGNED_INTEGER (303) 35 36
REAL (304) 34
IDENTIFIER (305) 1 7 8 24 26 48 56


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
program (52)
    on left: 1, on right: 0
block (53)
    on left: 2 3, on right: 1
declaration_block (54)
    on left: 4 5, on right: 2 5
declaration (55)
    on left: 6, on right: 4 5
identifier_list (56)
    on left: 7 8, on right: 6 8
type (57)
    on left: 9 10 11, on right: 6
code (58)
    on left: 12 13, on right: 2 3 49 50 56 57
statement_list (59)
    on left: 14 15, on right: 12 13 15 58 59
statement (60)
    on left: 16 17 18 19 20 21 22 23, on right: 14 15
assignment_statement (61)
    on left: 24, on right: 16
value (62)
    on left: 25 26 27, on right: 31 32 33 40 41
expression (63)
    on left: 28 29 30, on right: 24 25 28 29 54 56
term (64)
    on left: 31 32 33, on right: 28 29 30 31 32
constant (65)
    on left: 34 35 36 37, on right: 27
write_statement (66)
    on left: 38 39, on right: 17
output_list (67)
    on left: 40 41, on right: 38 41
comparator (68)
    on left: 42 43 44 45 46 47, on right: 54
read_statement (69)
    on left: 48, on right: 18
if_statement (70)
    on left: 49, on right: 19
if_else_statement (71)
    on left: 50, on right: 20
conditional (72)
    on left: 51 52 53, on right: 49 50 52 53 57 58 59
comparison (73)
    on left: 54 55, on right: 51 52 53 55
for_statement (74)
    on left: 56, on right: 21
while_statement (75)
    on left: 57, on right: 22
do_statement (76)
    on left: 58 59, on right: 23


State 0

    0 $accept: . program $end

    IDENTIFIER  shift, and go to state 1

    program  go to state 2


State 1

    1 program: IDENTIFIER . COLON block ENDP IDENTIFIER PERIOD

    COLON  shift, and go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: IDENTIFIER COLON . block ENDP IDENTIFIER PERIOD

    DECLARATIONS  shift, and go to state 5
    CODE          shift, and go to state 6

    block  go to state 7


State 4

    0 $accept: program $end .

    $default  accept


State 5

    2 block: DECLARATIONS . declaration_block CODE code

    IDENTIFIER  shift, and go to state 8

    declaration_block  go to state 9
    declaration        go to state 10
    identifier_list    go to state 11


State 6

    3 block: CODE . code

    IF                  shift, and go to state 12
    DO                  shift, and go to state 13
    WHILE               shift, and go to state 14
    FOR                 shift, and go to state 15
    NEWLINE             shift, and go to state 16
    WRITE               shift, and go to state 17
    READ                shift, and go to state 18
    OPEN_BRACKET        shift, and go to state 19
    SUBTRACT_OPERATOR   shift, and go to state 20
    CHARACTER_CONSTANT  shift, and go to state 21
    UNSIGNED_INTEGER    shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    code                  go to state 25
    statement_list        go to state 26
    statement             go to state 27
    assignment_statement  go to state 28
    value                 go to state 29
    expression            go to state 30
    term                  go to state 31
    constant              go to state 32
    write_statement       go to state 33
    read_statement        go to state 34
    if_statement          go to state 35
    if_else_statement     go to state 36
    for_statement         go to state 37
    while_statement       go to state 38
    do_statement          go to state 39


State 7

    1 program: IDENTIFIER COLON block . ENDP IDENTIFIER PERIOD

    ENDP  shift, and go to state 40


State 8

    7 identifier_list: IDENTIFIER .

    $default  reduce using rule 7 (identifier_list)


State 9

    2 block: DECLARATIONS declaration_block . CODE code
    5 declaration_block: declaration_block . declaration

    CODE        shift, and go to state 41
    IDENTIFIER  shift, and go to state 8

    declaration      go to state 42
    identifier_list  go to state 11


State 10

    4 declaration_block: declaration .

    $default  reduce using rule 4 (declaration_block)


State 11

    6 declaration: identifier_list . OF TYPE type SEMI_COLON
    8 identifier_list: identifier_list . COMMA IDENTIFIER

    OF     shift, and go to state 43
    COMMA  shift, and go to state 44


State 12

   49 if_statement: IF . conditional THEN code ENDIF
   50 if_else_statement: IF . conditional THEN code ELSE code ENDIF

    NOT                 shift, and go to state 45
    OPEN_BRACKET        shift, and go to state 19
    SUBTRACT_OPERATOR   shift, and go to state 20
    CHARACTER_CONSTANT  shift, and go to state 21
    UNSIGNED_INTEGER    shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value        go to state 29
    expression   go to state 46
    term         go to state 31
    constant     go to state 32
    conditional  go to state 47
    comparison   go to state 48


State 13

   58 do_statement: DO . statement_list WHILE conditional ENDDO
   59             | DO . statement_list SEMI_COLON WHILE conditional ENDDO

    IF                  shift, and go to state 12
    DO                  shift, and go to state 13
    WHILE               shift, and go to state 14
    FOR                 shift, and go to state 15
    NEWLINE             shift, and go to state 16
    WRITE               shift, and go to state 17
    READ                shift, and go to state 18
    OPEN_BRACKET        shift, and go to state 19
    SUBTRACT_OPERATOR   shift, and go to state 20
    CHARACTER_CONSTANT  shift, and go to state 21
    UNSIGNED_INTEGER    shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    statement_list        go to state 49
    statement             go to state 27
    assignment_statement  go to state 28
    value                 go to state 29
    expression            go to state 30
    term                  go to state 31
    constant              go to state 32
    write_statement       go to state 33
    read_statement        go to state 34
    if_statement          go to state 35
    if_else_statement     go to state 36
    for_statement         go to state 37
    while_statement       go to state 38
    do_statement          go to state 39


State 14

   57 while_statement: WHILE . conditional DO code ENDWHILE

    NOT                 shift, and go to state 45
    OPEN_BRACKET        shift, and go to state 19
    SUBTRACT_OPERATOR   shift, and go to state 20
    CHARACTER_CONSTANT  shift, and go to state 21
    UNSIGNED_INTEGER    shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value        go to state 29
    expression   go to state 46
    term         go to state 31
    constant     go to state 32
    conditional  go to state 50
    comparison   go to state 48


State 15

   56 for_statement: FOR . IDENTIFIER IS expression BY expression TO expression DO code ENDFOR

    IDENTIFIER  shift, and go to state 51


State 16

   39 write_statement: NEWLINE .

    $default  reduce using rule 39 (write_statement)


State 17

   38 write_statement: WRITE . OPEN_BRACKET output_list CLOSE_BRACKET

    OPEN_BRACKET  shift, and go to state 52


State 18

   48 read_statement: READ . OPEN_BRACKET IDENTIFIER CLOSE_BRACKET

    OPEN_BRACKET  shift, and go to state 53


State 19

   25 value: OPEN_BRACKET . expression CLOSE_BRACKET

    OPEN_BRACKET        shift, and go to state 19
    SUBTRACT_OPERATOR   shift, and go to state 20
    CHARACTER_CONSTANT  shift, and go to state 21
    UNSIGNED_INTEGER    shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value       go to state 29
    expression  go to state 54
    term        go to state 31
    constant    go to state 32


State 20

   36 constant: SUBTRACT_OPERATOR . UNSIGNED_INTEGER

    UNSIGNED_INTEGER  shift, and go to state 55


State 21

   37 constant: CHARACTER_CONSTANT .

    $default  reduce using rule 37 (constant)


State 22

   35 constant: UNSIGNED_INTEGER .

    $default  reduce using rule 35 (constant)


State 23

   34 constant: REAL .

    $default  reduce using rule 34 (constant)


State 24

   26 value: IDENTIFIER .

    $default  reduce using rule 26 (value)


State 25

    3 block: CODE code .

    $default  reduce using rule 3 (block)


State 26

   12 code: statement_list .
   13     | statement_list . SEMI_COLON
   15 statement_list: statement_list . SEMI_COLON statement

    SEMI_COLON  shift, and go to state 56

    $default  reduce using rule 12 (code)


State 27

   14 statement_list: statement .

    $default  reduce using rule 14 (statement_list)


State 28

   16 statement: assignment_statement .

    $default  reduce using rule 16 (statement)


State 29

   33 term: value .

    $default  reduce using rule 33 (term)


State 30

   24 assignment_statement: expression . ASSIGNMENT_OPERATOR IDENTIFIER
   28 expression: expression . SUBTRACT_OPERATOR term
   29           | expression . ADD_OPERATOR term

    ASSIGNMENT_OPERATOR  shift, and go to state 57
    ADD_OPERATOR         shift, and go to state 58
    SUBTRACT_OPERATOR    shift, and go to state 59


State 31

   30 expression: term .
   31 term: term . MULTIPULCATION_OPERATOR value
   32     | term . DIVISION_OPERATOR value

    DIVISION_OPERATOR        shift, and go to state 60
    MULTIPULCATION_OPERATOR  shift, and go to state 61

    $default  reduce using rule 30 (expression)


State 32

   27 value: constant .

    $default  reduce using rule 27 (value)


State 33

   17 statement: write_statement .

    $default  reduce using rule 17 (statement)


State 34

   18 statement: read_statement .

    $default  reduce using rule 18 (statement)


State 35

   19 statement: if_statement .

    $default  reduce using rule 19 (statement)


State 36

   20 statement: if_else_statement .

    $default  reduce using rule 20 (statement)


State 37

   21 statement: for_statement .

    $default  reduce using rule 21 (statement)


State 38

   22 statement: while_statement .

    $default  reduce using rule 22 (statement)


State 39

   23 statement: do_statement .

    $default  reduce using rule 23 (statement)


State 40

    1 program: IDENTIFIER COLON block ENDP . IDENTIFIER PERIOD

    IDENTIFIER  shift, and go to state 62


State 41

    2 block: DECLARATIONS declaration_block CODE . code

    IF                  shift, and go to state 12
    DO                  shift, and go to state 13
    WHILE               shift, and go to state 14
    FOR                 shift, and go to state 15
    NEWLINE             shift, and go to state 16
    WRITE               shift, and go to state 17
    READ                shift, and go to state 18
    OPEN_BRACKET        shift, and go to state 19
    SUBTRACT_OPERATOR   shift, and go to state 20
    CHARACTER_CONSTANT  shift, and go to state 21
    UNSIGNED_INTEGER    shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    code                  go to state 63
    statement_list        go to state 26
    statement             go to state 27
    assignment_statement  go to state 28
    value                 go to state 29
    expression            go to state 30
    term                  go to state 31
    constant              go to state 32
    write_statement       go to state 33
    read_statement        go to state 34
    if_statement          go to state 35
    if_else_statement     go to state 36
    for_statement         go to state 37
    while_statement       go to state 38
    do_statement          go to state 39


State 42

    5 declaration_block: declaration_block declaration .

    $default  reduce using rule 5 (declaration_block)


State 43

    6 declaration: identifier_list OF . TYPE type SEMI_COLON

    TYPE  shift, and go to state 64


State 44

    8 identifier_list: identifier_list COMMA . IDENTIFIER

    IDENTIFIER  shift, and go to state 65


State 45

   55 comparison: NOT . comparison

    NOT                 shift, and go to state 45
    OPEN_BRACKET        shift, and go to state 19
    SUBTRACT_OPERATOR   shift, and go to state 20
    CHARACTER_CONSTANT  shift, and go to state 21
    UNSIGNED_INTEGER    shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value       go to state 29
    expression  go to state 46
    term        go to state 31
    constant    go to state 32
    comparison  go to state 66


State 46

   28 expression: expression . SUBTRACT_OPERATOR term
   29           | expression . ADD_OPERATOR term
   54 comparison: expression . comparator expression

    EQUALITY_OPERATOR       shift, and go to state 67
    NOT_EQUAL_TO_OPERATOR   shift, and go to state 68
    LESS_THAN_OPERATOR      shift, and go to state 69
    MORE_THAN_OPERATOR      shift, and go to state 70
    LESS_EQUAL_TO_OPERATOR  shift, and go to state 71
    MORE_EQUAL_TO_OPERATOR  shift, and go to state 72
    ADD_OPERATOR            shift, and go to state 58
    SUBTRACT_OPERATOR       shift, and go to state 59

    comparator  go to state 73


State 47

   49 if_statement: IF conditional . THEN code ENDIF
   50 if_else_statement: IF conditional . THEN code ELSE code ENDIF
   52 conditional: conditional . AND comparison
   53            | conditional . OR comparison

    THEN  shift, and go to state 74
    AND   shift, and go to state 75
    OR    shift, and go to state 76


State 48

   51 conditional: comparison .

    $default  reduce using rule 51 (conditional)


State 49

   15 statement_list: statement_list . SEMI_COLON statement
   58 do_statement: DO statement_list . WHILE conditional ENDDO
   59             | DO statement_list . SEMI_COLON WHILE conditional ENDDO

    WHILE       shift, and go to state 77
    SEMI_COLON  shift, and go to state 78


State 50

   52 conditional: conditional . AND comparison
   53            | conditional . OR comparison
   57 while_statement: WHILE conditional . DO code ENDWHILE

    AND  shift, and go to state 75
    OR   shift, and go to state 76
    DO   shift, and go to state 79


State 51

   56 for_statement: FOR IDENTIFIER . IS expression BY expression TO expression DO code ENDFOR

    IS  shift, and go to state 80


State 52

   38 write_statement: WRITE OPEN_BRACKET . output_list CLOSE_BRACKET

    OPEN_BRACKET        shift, and go to state 19
    SUBTRACT_OPERATOR   shift, and go to state 20
    CHARACTER_CONSTANT  shift, and go to state 21
    UNSIGNED_INTEGER    shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value        go to state 81
    constant     go to state 32
    output_list  go to state 82


State 53

   48 read_statement: READ OPEN_BRACKET . IDENTIFIER CLOSE_BRACKET

    IDENTIFIER  shift, and go to state 83


State 54

   25 value: OPEN_BRACKET expression . CLOSE_BRACKET
   28 expression: expression . SUBTRACT_OPERATOR term
   29           | expression . ADD_OPERATOR term

    CLOSE_BRACKET      shift, and go to state 84
    ADD_OPERATOR       shift, and go to state 58
    SUBTRACT_OPERATOR  shift, and go to state 59


State 55

   36 constant: SUBTRACT_OPERATOR UNSIGNED_INTEGER .

    $default  reduce using rule 36 (constant)


State 56

   13 code: statement_list SEMI_COLON .
   15 statement_list: statement_list SEMI_COLON . statement

    IF                  shift, and go to state 12
    DO                  shift, and go to state 13
    WHILE               shift, and go to state 14
    FOR                 shift, and go to state 15
    NEWLINE             shift, and go to state 16
    WRITE               shift, and go to state 17
    READ                shift, and go to state 18
    OPEN_BRACKET        shift, and go to state 19
    SUBTRACT_OPERATOR   shift, and go to state 20
    CHARACTER_CONSTANT  shift, and go to state 21
    UNSIGNED_INTEGER    shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    $default  reduce using rule 13 (code)

    statement             go to state 85
    assignment_statement  go to state 28
    value                 go to state 29
    expression            go to state 30
    term                  go to state 31
    constant              go to state 32
    write_statement       go to state 33
    read_statement        go to state 34
    if_statement          go to state 35
    if_else_statement     go to state 36
    for_statement         go to state 37
    while_statement       go to state 38
    do_statement          go to state 39


State 57

   24 assignment_statement: expression ASSIGNMENT_OPERATOR . IDENTIFIER

    IDENTIFIER  shift, and go to state 86


State 58

   29 expression: expression ADD_OPERATOR . term

    OPEN_BRACKET        shift, and go to state 19
    SUBTRACT_OPERATOR   shift, and go to state 20
    CHARACTER_CONSTANT  shift, and go to state 21
    UNSIGNED_INTEGER    shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value     go to state 29
    term      go to state 87
    constant  go to state 32


State 59

   28 expression: expression SUBTRACT_OPERATOR . term

    OPEN_BRACKET        shift, and go to state 19
    SUBTRACT_OPERATOR   shift, and go to state 20
    CHARACTER_CONSTANT  shift, and go to state 21
    UNSIGNED_INTEGER    shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value     go to state 29
    term      go to state 88
    constant  go to state 32


State 60

   32 term: term DIVISION_OPERATOR . value

    OPEN_BRACKET        shift, and go to state 19
    SUBTRACT_OPERATOR   shift, and go to state 20
    CHARACTER_CONSTANT  shift, and go to state 21
    UNSIGNED_INTEGER    shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value     go to state 89
    constant  go to state 32


State 61

   31 term: term MULTIPULCATION_OPERATOR . value

    OPEN_BRACKET        shift, and go to state 19
    SUBTRACT_OPERATOR   shift, and go to state 20
    CHARACTER_CONSTANT  shift, and go to state 21
    UNSIGNED_INTEGER    shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value     go to state 90
    constant  go to state 32


State 62

    1 program: IDENTIFIER COLON block ENDP IDENTIFIER . PERIOD

    PERIOD  shift, and go to state 91


State 63

    2 block: DECLARATIONS declaration_block CODE code .

    $default  reduce using rule 2 (block)


State 64

    6 declaration: identifier_list OF TYPE . type SEMI_COLON

    TYPE_CHARACTER  shift, and go to state 92
    TYPE_INTEGER    shift, and go to state 93
    TYPE_REAL       shift, and go to state 94

    type  go to state 95


State 65

    8 identifier_list: identifier_list COMMA IDENTIFIER .

    $default  reduce using rule 8 (identifier_list)


State 66

   55 comparison: NOT comparison .

    $default  reduce using rule 55 (comparison)


State 67

   42 comparator: EQUALITY_OPERATOR .

    $default  reduce using rule 42 (comparator)


State 68

   43 comparator: NOT_EQUAL_TO_OPERATOR .

    $default  reduce using rule 43 (comparator)


State 69

   44 comparator: LESS_THAN_OPERATOR .

    $default  reduce using rule 44 (comparator)


State 70

   45 comparator: MORE_THAN_OPERATOR .

    $default  reduce using rule 45 (comparator)


State 71

   46 comparator: LESS_EQUAL_TO_OPERATOR .

    $default  reduce using rule 46 (comparator)


State 72

   47 comparator: MORE_EQUAL_TO_OPERATOR .

    $default  reduce using rule 47 (comparator)


State 73

   54 comparison: expression comparator . expression

    OPEN_BRACKET        shift, and go to state 19
    SUBTRACT_OPERATOR   shift, and go to state 20
    CHARACTER_CONSTANT  shift, and go to state 21
    UNSIGNED_INTEGER    shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value       go to state 29
    expression  go to state 96
    term        go to state 31
    constant    go to state 32


State 74

   49 if_statement: IF conditional THEN . code ENDIF
   50 if_else_statement: IF conditional THEN . code ELSE code ENDIF

    IF                  shift, and go to state 12
    DO                  shift, and go to state 13
    WHILE               shift, and go to state 14
    FOR                 shift, and go to state 15
    NEWLINE             shift, and go to state 16
    WRITE               shift, and go to state 17
    READ                shift, and go to state 18
    OPEN_BRACKET        shift, and go to state 19
    SUBTRACT_OPERATOR   shift, and go to state 20
    CHARACTER_CONSTANT  shift, and go to state 21
    UNSIGNED_INTEGER    shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    code                  go to state 97
    statement_list        go to state 26
    statement             go to state 27
    assignment_statement  go to state 28
    value                 go to state 29
    expression            go to state 30
    term                  go to state 31
    constant              go to state 32
    write_statement       go to state 33
    read_statement        go to state 34
    if_statement          go to state 35
    if_else_statement     go to state 36
    for_statement         go to state 37
    while_statement       go to state 38
    do_statement          go to state 39


State 75

   52 conditional: conditional AND . comparison

    NOT                 shift, and go to state 45
    OPEN_BRACKET        shift, and go to state 19
    SUBTRACT_OPERATOR   shift, and go to state 20
    CHARACTER_CONSTANT  shift, and go to state 21
    UNSIGNED_INTEGER    shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value       go to state 29
    expression  go to state 46
    term        go to state 31
    constant    go to state 32
    comparison  go to state 98


State 76

   53 conditional: conditional OR . comparison

    NOT                 shift, and go to state 45
    OPEN_BRACKET        shift, and go to state 19
    SUBTRACT_OPERATOR   shift, and go to state 20
    CHARACTER_CONSTANT  shift, and go to state 21
    UNSIGNED_INTEGER    shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value       go to state 29
    expression  go to state 46
    term        go to state 31
    constant    go to state 32
    comparison  go to state 99


State 77

   58 do_statement: DO statement_list WHILE . conditional ENDDO

    NOT                 shift, and go to state 45
    OPEN_BRACKET        shift, and go to state 19
    SUBTRACT_OPERATOR   shift, and go to state 20
    CHARACTER_CONSTANT  shift, and go to state 21
    UNSIGNED_INTEGER    shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value        go to state 29
    expression   go to state 46
    term         go to state 31
    constant     go to state 32
    conditional  go to state 100
    comparison   go to state 48


State 78

   15 statement_list: statement_list SEMI_COLON . statement
   59 do_statement: DO statement_list SEMI_COLON . WHILE conditional ENDDO

    IF                  shift, and go to state 12
    DO                  shift, and go to state 13
    WHILE               shift, and go to state 101
    FOR                 shift, and go to state 15
    NEWLINE             shift, and go to state 16
    WRITE               shift, and go to state 17
    READ                shift, and go to state 18
    OPEN_BRACKET        shift, and go to state 19
    SUBTRACT_OPERATOR   shift, and go to state 20
    CHARACTER_CONSTANT  shift, and go to state 21
    UNSIGNED_INTEGER    shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    statement             go to state 85
    assignment_statement  go to state 28
    value                 go to state 29
    expression            go to state 30
    term                  go to state 31
    constant              go to state 32
    write_statement       go to state 33
    read_statement        go to state 34
    if_statement          go to state 35
    if_else_statement     go to state 36
    for_statement         go to state 37
    while_statement       go to state 38
    do_statement          go to state 39


State 79

   57 while_statement: WHILE conditional DO . code ENDWHILE

    IF                  shift, and go to state 12
    DO                  shift, and go to state 13
    WHILE               shift, and go to state 14
    FOR                 shift, and go to state 15
    NEWLINE             shift, and go to state 16
    WRITE               shift, and go to state 17
    READ                shift, and go to state 18
    OPEN_BRACKET        shift, and go to state 19
    SUBTRACT_OPERATOR   shift, and go to state 20
    CHARACTER_CONSTANT  shift, and go to state 21
    UNSIGNED_INTEGER    shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    code                  go to state 102
    statement_list        go to state 26
    statement             go to state 27
    assignment_statement  go to state 28
    value                 go to state 29
    expression            go to state 30
    term                  go to state 31
    constant              go to state 32
    write_statement       go to state 33
    read_statement        go to state 34
    if_statement          go to state 35
    if_else_statement     go to state 36
    for_statement         go to state 37
    while_statement       go to state 38
    do_statement          go to state 39


State 80

   56 for_statement: FOR IDENTIFIER IS . expression BY expression TO expression DO code ENDFOR

    OPEN_BRACKET        shift, and go to state 19
    SUBTRACT_OPERATOR   shift, and go to state 20
    CHARACTER_CONSTANT  shift, and go to state 21
    UNSIGNED_INTEGER    shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value       go to state 29
    expression  go to state 103
    term        go to state 31
    constant    go to state 32


State 81

   40 output_list: value .

    $default  reduce using rule 40 (output_list)


State 82

   38 write_statement: WRITE OPEN_BRACKET output_list . CLOSE_BRACKET
   41 output_list: output_list . COMMA value

    CLOSE_BRACKET  shift, and go to state 104
    COMMA          shift, and go to state 105


State 83

   48 read_statement: READ OPEN_BRACKET IDENTIFIER . CLOSE_BRACKET

    CLOSE_BRACKET  shift, and go to state 106


State 84

   25 value: OPEN_BRACKET expression CLOSE_BRACKET .

    $default  reduce using rule 25 (value)


State 85

   15 statement_list: statement_list SEMI_COLON statement .

    $default  reduce using rule 15 (statement_list)


State 86

   24 assignment_statement: expression ASSIGNMENT_OPERATOR IDENTIFIER .

    $default  reduce using rule 24 (assignment_statement)


State 87

   29 expression: expression ADD_OPERATOR term .
   31 term: term . MULTIPULCATION_OPERATOR value
   32     | term . DIVISION_OPERATOR value

    DIVISION_OPERATOR        shift, and go to state 60
    MULTIPULCATION_OPERATOR  shift, and go to state 61

    $default  reduce using rule 29 (expression)


State 88

   28 expression: expression SUBTRACT_OPERATOR term .
   31 term: term . MULTIPULCATION_OPERATOR value
   32     | term . DIVISION_OPERATOR value

    DIVISION_OPERATOR        shift, and go to state 60
    MULTIPULCATION_OPERATOR  shift, and go to state 61

    $default  reduce using rule 28 (expression)


State 89

   32 term: term DIVISION_OPERATOR value .

    $default  reduce using rule 32 (term)


State 90

   31 term: term MULTIPULCATION_OPERATOR value .

    $default  reduce using rule 31 (term)


State 91

    1 program: IDENTIFIER COLON block ENDP IDENTIFIER PERIOD .

    $default  reduce using rule 1 (program)


State 92

    9 type: TYPE_CHARACTER .

    $default  reduce using rule 9 (type)


State 93

   10 type: TYPE_INTEGER .

    $default  reduce using rule 10 (type)


State 94

   11 type: TYPE_REAL .

    $default  reduce using rule 11 (type)


State 95

    6 declaration: identifier_list OF TYPE type . SEMI_COLON

    SEMI_COLON  shift, and go to state 107


State 96

   28 expression: expression . SUBTRACT_OPERATOR term
   29           | expression . ADD_OPERATOR term
   54 comparison: expression comparator expression .

    ADD_OPERATOR       shift, and go to state 58
    SUBTRACT_OPERATOR  shift, and go to state 59

    $default  reduce using rule 54 (comparison)


State 97

   49 if_statement: IF conditional THEN code . ENDIF
   50 if_else_statement: IF conditional THEN code . ELSE code ENDIF

    ELSE   shift, and go to state 108
    ENDIF  shift, and go to state 109


State 98

   52 conditional: conditional AND comparison .

    $default  reduce using rule 52 (conditional)


State 99

   53 conditional: conditional OR comparison .

    $default  reduce using rule 53 (conditional)


State 100

   52 conditional: conditional . AND comparison
   53            | conditional . OR comparison
   58 do_statement: DO statement_list WHILE conditional . ENDDO

    AND    shift, and go to state 75
    OR     shift, and go to state 76
    ENDDO  shift, and go to state 110


State 101

   57 while_statement: WHILE . conditional DO code ENDWHILE
   59 do_statement: DO statement_list SEMI_COLON WHILE . conditional ENDDO

    NOT                 shift, and go to state 45
    OPEN_BRACKET        shift, and go to state 19
    SUBTRACT_OPERATOR   shift, and go to state 20
    CHARACTER_CONSTANT  shift, and go to state 21
    UNSIGNED_INTEGER    shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value        go to state 29
    expression   go to state 46
    term         go to state 31
    constant     go to state 32
    conditional  go to state 111
    comparison   go to state 48


State 102

   57 while_statement: WHILE conditional DO code . ENDWHILE

    ENDWHILE  shift, and go to state 112


State 103

   28 expression: expression . SUBTRACT_OPERATOR term
   29           | expression . ADD_OPERATOR term
   56 for_statement: FOR IDENTIFIER IS expression . BY expression TO expression DO code ENDFOR

    BY                 shift, and go to state 113
    ADD_OPERATOR       shift, and go to state 58
    SUBTRACT_OPERATOR  shift, and go to state 59


State 104

   38 write_statement: WRITE OPEN_BRACKET output_list CLOSE_BRACKET .

    $default  reduce using rule 38 (write_statement)


State 105

   41 output_list: output_list COMMA . value

    OPEN_BRACKET        shift, and go to state 19
    SUBTRACT_OPERATOR   shift, and go to state 20
    CHARACTER_CONSTANT  shift, and go to state 21
    UNSIGNED_INTEGER    shift, and go to state 22
    REAL                shift, and go to state 23
    IDENTIFIER          shift, and go to state 24

    value     go to state 114
    constant  go to state 32


State 106

   48 read_statement: READ OPEN_BRACKET IDENTIFIER CLOSE_BRACKET .

    $default  reduce using rule 48 (read_statement)


State 107

    6 declaration: identifier_list OF TYPE type SEMI_COLON .

    $default  reduce using rule 6 (declaration)


State 108

   50 if_else_statement: IF conditional THEN code ELSE . code ENDIF
